src/style.css
@import "./reset.css";

@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");

:root {
  --square-size: 43px;
  --board-gap: 2px;
  --board-size: calc(
    calc(var(--square-size) * 10) + calc(var(--board-gap) * 10)
  );
  --color-target: blue;
  --color-ship: rgb(136, 134, 134);
  --color-ship-hit: rgb(232, 108, 108);
  --color-ship-just-hit: rgb(173, 17, 17);
  --color-water: rgb(157, 240, 237);
  --color-hit: rgb(41, 125, 122);
  --color-water-dark: rgb(37, 63, 75);
  --color-background: #08082e;
  --color-light: #f4f4f5;
  --color-complementary-light: rgb(205, 226, 72);
  --color-complementary-dark: rgb(60, 65, 32);
  font-family: "Roboto", sans-serif;
}

/* * {
  outline: dashed red;
} */
body {
  position: relative;
  height: 100vh;
  width: 100vw;
  color: var(--color-light);
}

#game {
  background-color: var(--color-background);
  height: 100vh;
  width: 100vw;
  display: grid;
  grid-template-rows: 1fr 6fr 50px;
  grid-template-areas:
    "header"
    "main"
    "footer";
  align-items: center;
  justify-items: center;
}

#game,
#pop-up {
  transition: left 2s;
  transition: opacity 2s;
}

#pop-up.inactive,
#game.inactive {
  /* display: none; */
  opacity: 0;
  position: absolute;
  left: -100%;
  transition: all 2s;
}

h1,
h3 {
  font-size: 1.5rem;
}

header {
  display: flex;
  align-items: center;
  justify-content: center;
  align-self: end;
  position: relative;
  grid-area: header;
  width: 100%;
  min-height: 80px;
}

header h1 {
  color: var(--color-complementary-light);
  font-size: 3rem;
  letter-spacing: 0.2rem;
}

h1.win {
  color: rgb(100, 238, 100);
}

h1.loose {
  color: rgb(238, 100, 100);
}

header > button {
  position: absolute;
  bottom: -30px;
  right: min(1vw, 80px);
}

header > div > h1.typing {
  overflow: hidden; /* Ensures the content is not revealed until the animation */
  border-right: 0.15em solid var(--color-complementary-light); /* The typwriter cursor */
  white-space: nowrap; /* Keeps the content on a single line */
  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
  letter-spacing: 0.15em; /* Adjust as needed */
  animation: typing 1s steps(40, end), blink-caret 0.75s step-end infinite;
}

main {
  width: 100%;
  display: grid;
  grid-template-rows: 50px 1fr;
  grid-template-columns: repeat(2, 1fr);
  justify-items: center;
  gap: auto;
  align-items: center;
  grid-area: main;
}

main > h1 {
  color: var(--color-light);
  grid-row: 1 / 2;
}

.board {
  width: var(--board-size);
  height: var(--board-size);
  background-color: var(--color-background);
  display: flex;
  flex-direction: column;
  grid-template-rows: repeat(10, 1fr);
  gap: var(--board-gap);
}

.row {
  display: flex;
  height: auto;
  gap: var(--board-gap);
  position: relative;
}

.square {
  background-color: var(--color-water);
  width: var(--square-size);
  height: var(--square-size);
}

.square.enemy {
  background-color: #52525b;
}

.square.enemy:hover {
  cursor: crosshair;
}

.square.enemy.hit {
  pointer-events: none;
}

.ship-square:not(.enemy:not(.hit)) {
  --border-size: 6px;
  --border-color: rgb(61, 55, 55);
  background-color: var(--color-ship);
  width: calc(var(--square-size) - calc(var(--border-size) * 2));
  height: calc(var(--square-size) - calc(var(--border-size) * 2));
  border: var(--border-color) solid var(--border-size);
}

.square.ship-square.hit {
  background-color: var(--color-ship-hit);
}

.square.ship-square.hit.just-hit {
  background-color: var(--color-ship-just-hit);
}

.square.hit {
  transition: background-color 0.5s;
  background-color: var(--color-hit);
  position: relative;
}

.square.block {
  opacity: 0.7;
}

.square.hit:not(.ship-square)::before {
  text-align: center;
  content: ".";
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -70%);
}

.square.hit.just-hit {
  outline: solid yellow 1px;
}

.square.enemy:hover {
  background-color: var(--color-target);
}

footer {
  grid-area: footer;
  margin-top: auto;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 50px;
  width: 100%;
  gap: 2vw;
  background-color: var(--color-background);
  color: white;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 1.5rem;
}

#github-logo {
  height: 30px;
}

#pop-up {
  width: 100vw;
  height: 100vh;
  background-color: var(--color-background);
  display: grid;
  justify-items: center;
  align-items: start;
  gap: 10px;
  grid-template-rows: 1fr 2fr 1fr 50px;
  grid-template-columns: 1fr 1fr;
  grid-template-areas:
    "title title"
    "board ships"
    "button button"
    "footer footer";
}

#pop-up article {
  grid-area: title;
  align-self: center;
}

#pop-up .board {
  grid-area: board;
  justify-self: end;
}

#pop-up article {
  background: linear-gradient(
    to bottom,
    rgb(135, 135, 236),
    var(--color-water)
  );
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  text-align: center;
}

button {
  background-color: var(--color-complementary-light);
  border-radius: 0.8rem;
  box-shadow: 5px 5px var(--color-complementary-dark);
  padding: 10px 16px 10px 16px;
  border: none;
  font-size: 1.5rem;
  font-weight: 600;
  color: var(--color-water-dark);
  position: relative;
}

button.ready:hover {
  background-image: linear-gradient(
    to right,
    var(--color-complementary-light) 0%,
    var(--color-water) 50%,
    var(--color-complementary-light) 100%
  );
  animation: slidebg 2s linear infinite;
}

button:hover {
  background-color: var(--color-complementary-light);
  cursor: pointer;
}

button:active {
  position: relative;
  left: 3px;
  top: 2px;
  box-shadow: 2px 2px 1px black;
}

button.not-yet {
  box-shadow: 0px 0px 2px 2px red;
}

button.not-yet::after {
  content: "Place all your ships first";
  color: red;
  font-size: 1rem;
  position: absolute;
  bottom: -100%;
  right: 0%;
}

#title {
  font-size: 3rem;
  font-weight: bold;
  letter-spacing: 0.3rem;
  padding: 20px;
}

#ships-wrapper {
  grid-area: ships;
  justify-self: start;
  position: relative;
  align-items: flex-start;
}

#ships {
  display: flex;
  justify-items: flex-start;
  gap: 20px;
  flex-wrap: wrap;
  position: relative;
  min-height: calc(var(--board-size) / 2);
  max-height: var(--board-size);
  max-width: var(--board-size);
  padding: 20px;
  align-items: flex-start;
  position: relative;
}

#ships-instructions {
  display: flex;
  flex-direction: column;
  padding: 0px 20px;
  gap: 20px;
}

#pop-up button {
  grid-area: button;
  align-self: center;
}

#ships .ship.hide {
  opacity: 0.3;
  display: none;
}

.ship {
  display: flex;
  gap: var(--board-gap);
  background-color: grey;
  min-height: var(--square-size);
}

.ship.vertical {
  flex-direction: column;
}

#pop-up .board {
  max-height: var(--board-size);
  position: relative;
}

#pop-up .board .ship {
  position: absolute;
}

.square.drag-over {
  background-color: yellow;
}

.square.behind {
  background-color: green;
}

@media only screen and (max-width: 950px) {
  main {
    display: flex;
    flex-direction: column;
    height: 100%;
    justify-content: space-evenly;
    gap: 30px;
    padding-top: 20px;
  }

  header {
    align-self: center;
    width: 100%;
  }

  #game {
    background-color: var(--color-background);
    height: auto;
    width: 100vw;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  #pop-up {
    height: auto;
    background-color: var(--color-background);
    display: flex;
    flex-direction: column;
    justify-items: center;
    align-items: center;
    gap: 20px;
    min-height: 100%;
  }

  #ships {
    height: 50%;
  }
}

@media (max-width: 500px) {
  :root {
    --square-size: 23px;
    --board-gap: 1px;
    --board-size: calc(
      calc(var(--square-size) * 10) + calc(var(--board-gap) * 10)
    );
  }
}

@keyframes wave {
  0% {
    transform: translate(-50%, -75%) rotate(0deg);
  }

  100% {
    transform: translate(-50%, -75%) rotate(360deg);
  }
}

@keyframes slidebg {
  to {
    background-position: 18vw;
  }
}

/* The typing effect */
@keyframes typing {
  from {
    width: 0;
  }
  to {
    width: 100%;
  }
}

/* The typewriter cursor effect */
@keyframes blink-caret {
  from,
  to {
    border-color: transparent;
  }
  50% {
    border-color: var(--color-complementary-light);
  }
}

